objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Rating__c</fullName>
        <defaultValue>&quot;Good&quot;</defaultValue>
        <label>Candidate Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent - 5</fullName>
                </value>
                <value>
                    <fullName>Good - 4</fullName>
                </value>
                <value>
                    <fullName>Average - 3</fullName>
                </value>
                <value>
                    <fullName>Below Average - 2</fullName>
                </value>
                <value>
                    <fullName>Poor - 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidate Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Interview__c</fullName>
        <label>Date of Interview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_on_the_Candidate__c</fullName>
        <label>Feedback on the Candidate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_on_the_Interviewer_1__c</fullName>
        <label>Feedback on the Interviewer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interviewer_Name__c</fullName>
        <label>Interviewer Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer_Rating__c</fullName>
        <defaultValue>&quot;Good&quot;</defaultValue>
        <label>Interviewer Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent - 5</fullName>
                </value>
                <value>
                    <fullName>Good - 4</fullName>
                </value>
                <value>
                    <fullName>Average - 3</fullName>
                </value>
                <value>
                    <fullName>Below Average - 2</fullName>
                </value>
                <value>
                    <fullName>Poor - 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Vision_Mission_of_Company_explained__c</fullName>
        <label>Was Vision/Mission of Company explained?</label>
        <type>TextArea</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>